# boilerpipe-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
test-data/: 0.base64  0.html  1.base64  1.html  10.base64  10.html  11.base64  11.html  12.base64  12.html  13.base64  13.html  2.base64  2.html  3.base64  3.html  4.base64  4.html  5.base64  6.base64  7.base64  7.html  8.base64  8.html  9.base64  9.html
