[package]
name = "boilerpipe"
version = "0.1.0"
authors = ["Dmitry Shlagoff <richyannet@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12"
html5ever = "0.25"
ego-tree = "0.6"
tendril = "0.4"
regex = "1.4"
lazy_static = "1.4"
unicode-segmentation = "1.6"
chrono = "0.4"

[dev-dependencies]
base64 = "0.13"
