[package]
authors = ["Dmitry Shlagoff <richyannet@yandex.ru>"]
description = "Library for text extraction from HTML documents"
edition = "2018"
license = "MIT"
name = "boilerpipe"
repository = "https://github.com/0nkery/boilerpipe-rs"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ego-tree = "0.6"
html5ever = "0.25"
lazy_static = "1.4"
regex = "1.4"
scraper = "0.12"
tendril = "0.4"
unicode-segmentation = "1.6"

[dev-dependencies]
base64 = "0.13"
